# scraping-mcp-server

./: .gitignore  DEVELOPMENT.md  INSTALL.md  QUICKSTART.md  README.md  claude_desktop_config.json  install.ps1  install.sh  main.py  pyproject.toml  pyrightconfig.json  reference.py  rem.md  requirements.txt  server.py  test_google_sheets.py  test_server.py  ~~.md
